--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="row" role="region">
                     <!--Linha Esquerda-->
                     <hr style=" background-color: black; color: black; size: 50%; width: 42%;">
-                    <h2>Latest News</h2>
+                    <h2>Latest News2</h2>
                     <!--Linha Direita-->
                     <hr style="background-color: black; color: black; size: 50%; width: 42%;">
                 </div>
